--- a/advertisementPage.html
+++ b/advertisementPage.html
@@ -219,7 +219,7 @@
                     <div class="form-group">
                         <div class="col-md-offset-5 col-md-11">
                             <input type="submit" value="ارسال تبلیغ" class="btn btn-default btnColors"
-                                   id="advertisement-form-submit-btn" disabled="disabled" />
+                                   id="advertisement-form-submit-btn"/>
                         </div>
                     </div>
 
@@ -239,6 +239,8 @@
 
     <script>
         //Scripts for design and it's actions
+        const data = 'http://185.88.179.80:8000';
+        var my_address;
 
         /*
         Function opening and closing subset of an tag
@@ -333,8 +335,7 @@
             $("#logout").click(function () {
                 var logout_var = confirm(" آیا اطمینان از خروج دارید؟ ");
                 if (logout_var ==true){
-                    $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/logout/";
+                        my_address = data + "/salesman/logout/";
                         $.ajax({
                             type: 'POST',
                             dataType: 'json',
@@ -354,8 +355,6 @@
                                 alert(" اتصال به اینترنت برقرار نیست. ");
                             }
                         })
-
-                    });
 
                 }else{
                     alert(" از این که همراه ما خواهید بود متشکریم. ");
@@ -402,8 +401,7 @@
 
 
 
-                $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/add-advertisement/";
+                        my_address = data + "/salesman/add-advertisement/";
                         $.ajax({
                             type: 'POST',
                             url: my_address,
@@ -425,8 +423,6 @@
                             error: function () {
                                 alert(" اتصال به اینترنت برقرار نیست. ");}
                         })
-
-                    });
 
             });
 
