--- a/completeInfo.html
+++ b/completeInfo.html
@@ -306,6 +306,8 @@
 
     <script>
 
+        const data = 'http://185.88.179.80:8000';
+
         $(document).ready( function () {
 
             const signUp_complete_info_form_var = document.getElementById("signUp-complete-info-form");
@@ -334,31 +336,31 @@
             /*
             Request for getting cities name and id from server
             */
-            $.get("address.txt", function (data) {
-                const my_address = data + "/cities/";
-                $.ajax({
-                    type: 'GET',
-                    // dataType: 'json',
-                    // contentType: 'application/json',
-                    url: my_address,
-                    // data: signUp_complete_info_json,
-                    success: function(resultData, status, xhr){
-                        alert(resultData.message);
-                        if (resultData.result.toString() === "true") {
-                            for (let val of (resultData.cities)) {
-                                const op = document.createElement("option");
-                                const opText = document.createTextNode(val.name);
-                                const lastOp = document.getElementById("signUp-complete-info-form-city-lastOp-op");
-                                op.value = val.id;
-                                op.appendChild(opText);
-                                signUp_complete_info_form_var.city.insertBefore(op,lastOp);
-                            }
+       
+            const my_address = data + "/cities/";
+            $.ajax({
+                type: 'GET',
+                // dataType: 'json',
+                // contentType: 'application/json',
+                url: my_address,
+                // data: signUp_complete_info_json,
+                success: function(resultData, status, xhr){
+                    // alert(resultData.message);
+                    if (resultData.result.toString() === "true") {
+                        for (let val of (resultData.cities)) {
+                            const op = document.createElement("option");
+                            const opText = document.createTextNode(val.name);
+                            const lastOp = document.getElementById("signUp-complete-info-form-city-lastOp-op");
+                            op.value = val.id;
+                            op.appendChild(opText);
+                            signUp_complete_info_form_var.city.insertBefore(op,lastOp);
                         }
-                    },
-                    error: function () {
-                        alert(" اتصال به اینترنت برقرار نیست. ");}
-                })
-            });
+                    }
+                },
+                error: function () {
+                    alert(" اتصال به اینترنت برقرار نیست. ");}
+            })
+    
 
 
             $("#signUp-complete-info-form").submit(function (e) {
@@ -395,27 +397,25 @@
 
 
 
-                    $.get("address.txt", function (data) {
-                        const my_address = data + "/salesman/signup/complete-info/";
-                        $.ajax({
-                            type: 'POST',
-                            dataType: 'json',
-                            url: my_address,
-                            data: signUp_formData,
-                            contentType: false,
-                            processData: false,
-                            crossDomain: true,
-                            success: function(resultData, status, xhr){
-                                alert(resultData.message);
-                                if (resultData.result.toString() === "true") {
-                                    window.location.href="HomePage.html";
-                                }
-                            },
-                            error: function () {
-                                alert(" اتصال به اینترنت برقرار نیست. ");}
-                        })
+                    const my_address = data + "/salesman/signup/complete-info/";
+                    $.ajax({
+                        type: 'POST',
+                        dataType: 'json',
+                        url: my_address,
+                        data: signUp_formData,
+                        contentType: false,
+                        processData: false,
+                        crossDomain: true,
+                        success: function(resultData, status, xhr){
+                            alert(resultData.message);
+                            if (resultData.result.toString() === "true") {
+                                window.location.href="HomePage.html";
+                            }
+                        },
+                        error: function () {
+                            alert(" اتصال به اینترنت برقرار نیست. ");}
+                    })
 
-                    });
                 // } else
                 //     alert("طول نام کاربری و رمزعبور باید حداقل 5 کاراکتر باشد.");
             });
